Uploaded image for project: 'Geode'
  1. Geode
  2. GEODE-8297

TcrMessage default timeout is set to 15ms, rather than 15 seconds

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 1.14.0
    • native client
    • None

    Description

      While analyzing a log from a bug report, I noticed a trace message from TcrConnection::sendData:

      [debug <<deleted>> 123145454981120] before send len 99 sendTimeoutSec = 15000us checkConnected = 1 m_connected 1

       

      It appears, from further digging, that we are indeed using a 15ms timeout for (at least) the 

      USER_CREDENTIAL_MESSAGE.  This will happen for any message we don't explicitly set the timeout on before sending.  Potentially this is a cause for a lot of random network timeout failures.  Regardless of whether or not it's for sure causing problems, it's definitely wrong, by 3 orders of magnitude.  This needs to be set to the intended default of 15 seconds.

       

      Attachments

        Issue Links

          Activity

            People

              bbender Blake Bender
              bbender Blake Bender
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: