GEODE-8297: Use correct initialization for TcrMessage::m_timeout - Intent was to set it 15 seconds, but it was actually being set to 15ms